--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 
      <div class="container">
                 <h2 id="titre">Contact</h2>
-                <form action="http://localhost:2000/contact" method="post" class="form">
+                <form method="post" class="form">
                     <div class="inputBox">
                         <input type="text" name="nom" id="nom" placeholder="enter your name">
                     </div>
